[package]
name = "crab_courier"
version = "0.2.0"
edition = "2024"
description = "Send an attachment to a predefined receiver with your Gmail account and the help of the Crab Courier!"
authors = [ "Mateusz Kuniczuk <mateuszkuniczuk98@gmail.com" ]
readme = "README.md"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "env"] }
dotenvy = "0.15.7"
lettre = "0.11.19"
mime_guess = "2.0.5"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.23.0"
